  * Moved CommandException to Patterns/Command/Exceptions
  * Moved EnrichedEnumException to Patterns/Enumeration/Exceptions
  * Moved ValueObjectValidationException to Patterns/ValueObject/Exceptions
  * Moved ProcessException to Process/Exceptions
  * Moved SelfReferenceException to Formatters/Exceptions
  * ReflectionHelper replaced by ReflectionCache methods

AllOverIt.Assertion
  * Removed methods that asserted an enumerable was a concrete collection type and instead updated .NET Core 3.1
    versions to check for different collection types before falling back to the default Any() Linq method.

AllOverIt.Pagination
  * New package to provide keyset based pagination for any IQueryable, including EF queries

AllOverIt.EntityFrameworkCore.Pagination
  * New package to provide keyset based pagination extensions for any EF


06 Jun 2022
Version 5.9.0
======================================================================================================================
AllOverIt
  * Added Clear(), Reset(), AddCallSite(), and AddExtendedCallSite() to Breadcrumbs, as well as the ability to
    enable/disable adding breadcrumbs. StartTimestamp and Enabled are now thread safe if indicated by the options.
    The breadcrumbs can also be configured to initially be enabled or disabled when initially created.
  * Added ReadOnlyCollection, ReadOnlyList, and ReadOnlyDictionary implementations that are  truly immutable
  * Updated Collection/List/Dictionary EmptyReadOnly<T>() so the underlying collection is truly immutable

AllOverIt.DependencyInjection
  * Updated to reference Microsoft.Extensions.DependencyInjection.Abstractions instead of Microsoft.Extensions.DependencyInjection

AllOverIt.Fixture
AllOverIt.Fixture.FakeItEasy
  * Updated to FluentAssertions v6.7.0


01 Jun 2022
Version 5.8.0
======================================================================================================================
AllOverIt