@@ -15,6 +15,8 @@ AllOverIt
   * Moved ProcessException to Process/Exceptions
   * Moved SelfReferenceException to Formatters/Exceptions
   * ReflectionHelper replaced by ReflectionCache methods
+  * Added a convenience global Breadcrumbs instance (GlobalBreadcrumbs) - for troubleshooting use only
+  * Removed all GenericCacheExtensions - already handled by ReflectionCache. Renamed ReflectionCacheKey to IReflectionCacheKey.
 
 AllOverIt.Assertion
   * Removed methods that asserted an enumerable was a concrete collection type and instead updated .NET Core 3.1
